# NekoPilot-Android

./: .gitignore  BUILDING.md  CONTRIBUTING.md  LANGUAGE_STRATEGY.md  PROJECT.md  README.md  README_CN.md  RELEASE_CHECKLIST.md  SECURITY.md  UI_COMPLETENESS_AUDIT.md  UI_STANDARDIZATION_AUDIT_20260716.md  build.gradle.kts  design-qa.md  lint.xml  nb4a.properties  repositories.gradle.kts  run
.github/workflows/: release.yml
app/: build.gradle.kts  lint.xml  proguard-rules.pro
config/: cgo-compat-allowlist.txt  java-compat-allowlist.txt
docs/: PRODUCT_AND_UI_STRUCTURE.md  libbox-1.14.0-beta.1-provenance.md
libcore/: assets.go  assets_android.go  assets_other.go  assets_test.go  box.go  box_connection_test.go  box_include.go  build.sh  config_compiler.go  config_compiler_test.go  data_core.go  data_core_test.go  dns_android.go  dns_box.go  dns_box_test.go  dns_race.go  external_plugin.go  external_plugin_test.go  geosite.go  go.mod  go.sum  http.go  http_test.go  init.sh  io.go  io_test.go  log_sanitizer.go  log_sanitizer_test.go  migration.go  migration_test.go  native_api.go  native_api_test.go  nb4a.go  nb4a_test.go  platform_box.go  platform_box_test.go  platform_java.go  portable_data.go  portable_data_test.go  profile_batch_binary.go  (+20 more)
maestro/: home-group-list.yaml  home-unified-list.yaml
rust/nekodata-core/: Cargo.toml
rust/nekodata-core/src/: lib.rs
scripts/: build-official-libbox.sh  build-rust-data-core-host.sh  build-rust-data-core.sh  bump-version.sh  libcore-source-fingerprint.sh  post-receive-github-sync.sh  verify-language-boundaries.sh
(+459 files in other folders)
