[package]
name = "nekodata-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = "symbols"
